--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: bedrock_chatbot
-          IMAGE_TAG: latest
+          IMAGE_TAG: v1
         run: |
           echo " Building Docker Image..."
           docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
