--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
           IMAGE_TAG: v1.03
         run: |
           echo " Building Docker Image..."
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker buildx -t $ECR_REPOSITORY:$IMAGE_TAG .
 
           echo " Tagging Image..."
           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
