--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,33 +14,86 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name:  Checkout code
+      - name: Checkout code
         uses: actions/checkout@v3
-      
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name:  Configure AWS credentials via OIDC
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Configure AWS credentials via OIDC
         uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::898896902478:role/bedrock_chatbot_role
           aws-region: us-east-1
 
-      - name:  Login to Amazon ECR
+      - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name:  Build, Tag & Push Docker Image
+      - name: Build and push Docker image to ECR (arm64)
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: bedrock_chatbot
-          IMAGE_TAG: v1.04
         run: |
-          echo " Building Docker Image..."
-          docker buildx build --platform linux/arm64 -t $ECR_REPOSITORY:$IMAGE_TAG .
+          # Generate a dynamic tag: latest + short SHA
+          COMMIT_SHA=$(echo $GITHUB_SHA | cut -c1-7)
+          IMAGE_TAG=latest-$COMMIT_SHA
 
-          echo " Tagging Image..."
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "Building and pushing Docker image: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
-          echo " Pushing to ECR..."
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker buildx build \
+            --platform linux/arm64 \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
+            --push .
+
+
+# name: Build and Push to ECR
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# permissions:
+#   id-token: write
+#   contents: read
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name:  Checkout code
+#         uses: actions/checkout@v3
+      
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v3
+
+#       - name:  Configure AWS credentials via OIDC
+#         uses: aws-actions/configure-aws-credentials@v2
+#         with:
+#           role-to-assume: arn:aws:iam::898896902478:role/bedrock_chatbot_role
+#           aws-region: us-east-1
+
+#       - name:  Login to Amazon ECR
+#         id: login-ecr
+#         uses: aws-actions/amazon-ecr-login@v2
+
+#       - name:  Build, Tag & Push Docker Image
+#         env:
+#           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+#           ECR_REPOSITORY: bedrock_chatbot
+#           IMAGE_TAG: v1.04
+#         run: |
+#           echo " Building Docker Image..."
+#           docker buildx build --platform linux/arm64 -t $ECR_REPOSITORY:$IMAGE_TAG .
+
+#           echo " Tagging Image..."
+#           docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+#           echo " Pushing to ECR..."
+#           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
